# RevengeTrade

./: README.md  advanced_indicators.py  advanced_stoploss.py  binance_api_validator.py  bot.py  chyper_pattern.py  coin_finder.py  config.py  csv_trade_logger.py  dynamic_risk_manager.py  ema_reject_strategy.py  gen_trend_analyz.py  initial_position_manager.py  limit_buy_order.py  limit_order_executer.py  limit_sell_order.py  loading.py  log_reporting.py  part_by_part.py  pos_cost_cal.py  pyproject.toml  stop_loss_print.py  trade_database.py  trade_positions.db  trend_channel_analyzer.py  trend_strategy.py
advanced_indicators/: advanced_strategy.py  stop_avi.py
building/: ta_lib-0.5.2-cp311-cp311-win_amd64.whl  talib.txt
helpers/: min_trade.py  min_trade_coins.py  precision.py  sqllite.py  tick_size.py
