[project]
name = "trading-bot"
version = "0.1.0"
description = "trading bot based on indicators"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "ccxt==4.1.13",
"pandas==2.1.1",
"numpy==1.26.0",
"TA-Lib==0.4.28",
"python-binance==1.0.19",
"python-dotenv==1.0.0",
"colorama==0.4.6",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
